# embedumap

./: .gitignore  PLAN.md  README.md  REPORT.md  notes.md  prompts.md  pyproject.toml
samples/: README.md  blog-text-300.csv  blog-text.csv  calvin-images.csv  mixed-media.csv
src/embedumap/: __init__.py  cli.py  core.py  html.py
tests/: test_core.py
