[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "embedumap"
version = "0.1.0"
description = "Build a standalone HTML UMAP visualization from a CSV using Gemini embeddings."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4.0",
  "google-genai>=1.34.0",
  "httpx>=0.28.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pillow>=11.1.0",
  "python-dotenv>=1.0.1",
  "rich>=14.0.0",
  "scikit-learn>=1.6.1",
  "tenacity>=9.0.0",
  "typer>=0.16.0",
  "umap-learn>=0.5.7",
]

[project.scripts]
embedumap = "embedumap.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/embedumap"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
